fixed mobile layout issue: cards were not aligning themselves in a single column

--- a/style/__screens.scss
+++ b/style/__screens.scss
@@ -3,6 +3,11 @@
     .page-title {
         border-bottom: 1px solid hsl(228, 12%, 44%);
     }
+    .follow-boxes,
+    .today-overview {
+        display: flex;
+        flex-direction: column;
+    }
 }
 
 // Tablet layout
